--- a/android-app/res/layout/activity_waiting_time.xml
+++ b/android-app/res/layout/activity_waiting_time.xml
@@ -28,4 +28,22 @@
         android:layout_below="@+id/waiting_time_number"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="39dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/make_reservation_hold_text"
+        android:id="@+id/make_reservation_hold_text"
+        android:layout_below="@+id/waiting_time_minutes"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="36dp" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/button_yes"
+        android:id="@+id/button_yes"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentLeft="true" />
 </RelativeLayout>
