--- a/android-app/PagrProject/Pagr/src/main/res/layout/list_appetizer_view.xml
+++ b/android-app/PagrProject/Pagr/src/main/res/layout/list_appetizer_view.xml
@@ -1,17 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin">
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent" android:layout_height="match_parent"
+        android:id="@+id/fragment_container"
+        android:layout_above="@+id/button_proceed_to_checkout">
 
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent"
-    android:id="@+id/fragment_container">
-
+    </FrameLayout>
     <Button
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="@string/button_submit_order"
-        android:id="@+id/button_submit_order"
+        android:text="@string/button_proceed_to_checkout"
+        android:id="@+id/button_proceed_to_checkout"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_gravity="center_horizontal|bottom" />
-
-</FrameLayout>
+        android:layout_alignLeft="@+id/fragment_container" />
+</RelativeLayout>
