--- a/android-app/PagrProject/Pagr/src/main/res/layout/activity_main.xml
+++ b/android-app/PagrProject/Pagr/src/main/res/layout/activity_main.xml
@@ -6,22 +6,11 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".ViewCartActivity">
-
-    <Button
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/button_submit_order"
-        android:id="@+id/button_submit_order"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+    tools:context=".ViewAppetizerActivity">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Text"
-        android:id="@+id/text_your_order"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        android:text="@string/hello_world" />
 
 </RelativeLayout>
