--- a/android-app/PagrProject/Pagr/src/main/res/layout/appetizer_view.xml
+++ b/android-app/PagrProject/Pagr/src/main/res/layout/appetizer_view.xml
@@ -21,6 +21,9 @@
         android:layout_height="wrap_content"
         android:id="@+id/imageAppetizer"
         android:layout_above="@+id/appetizer_view"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="38dp" />
+        android:layout_marginBottom="38dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true" />
+
 </RelativeLayout>
